dashboard/ingress-dashboard.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    name: kubedash
  name: kubedash
  namespace: kubernetes-dashboard
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /dashboard
spec:
  rules:
     - host: zombhome.zomb.lan
       http:
          paths:
           - path: /kuberdash
             backend:
               serviceName: kubernetes-dashboard
               servicePort: 80
